@@ -29,3 +29,4 @@ hive-storage-api.version=2.7.0
 protobuf-java.version=2.5.0
 mockito.version=1.8.4
 orc.version=1.5.6
+metrics-core.version=3.0.1
