@@ -20,7 +20,6 @@ hadoop-mapreduce.version=3.3.6
 
 accumulo.version=1.10.4
 netty.version=3.10.6.Final
-codahale.metrics-core.version=3.0.1
 netty-all.version=4.1.77.Final
 re2j.version=1.0
 tez.version=0.10.3
@@ -31,3 +30,4 @@ hive-storage-api.version=2.7.2
 protobuf-java.version=3.21.1
 mockito.version=2.28.2
 orc.version=1.5.13
+metrics-core.version=3.2.4
