@@ -75,7 +75,6 @@ xalan.version=2.7.1
 wagon-http.version=1.0-beta-2
 zookeeper.version=3.7.2
 servlet.version=4.0.6
-metrics-core.version=2.1.2
 guice.version=3.0
 guice-servlet.version=3.0
 aopalliance.version=1.0
